# nixguard

./: .gitignore  Cargo.toml  README.md  client.conf  flake.nix  privkey  result
src/: client_config.rs  keys.rs  main.rs  server_config.rs
src/models/: config.rs
