[package]
name = "nixguard"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
inquire = "0.7.4"
rust-ini = "0.21.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
